--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title>Apache Friends</title>
+    <title>404 Not Found</title>
 
     
     
@@ -24,7 +24,7 @@
 
   </head>
 
-  <body class="howto_platform_links">
+  <body class="x404">
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
@@ -51,7 +51,7 @@
           <ul class="right">
               <li class=""><a href="/applications.html">Applications</a></li>
               <li class=""><a href="/dashboard/faq.html">FAQs</a></li>
-              <li class="active"><a href="/dashboard/howto.html">HOW-TO Guides</a></li>
+              <li class=""><a href="/dashboard/howto.html">HOW-TO Guides</a></li>
               <li class=""><a target="_blank" href="/dashboard/phpinfo.php">PHPInfo</a></li>
               <li class=""><a href="/phpmyadmin/">phpMyAdmin</a></li>
           </ul>
@@ -60,9 +60,29 @@
     </div>
 
     <div id="wrapper">
-      <h5><a href="/dashboard/docs/use-different-php-version.html">Use a Different PHP Version</a></h5>
-<h5><a href="/dashboard/docs/use-php-fcgi.html">Run PHP under FastCGI</a></h5>
-<h5><a href="/dashboard/docs/configure-use-tomcat.html">Configure and Use Apache Tomcat</a></h5>
+      <div class="hero">
+  <div class="row">
+    <div class="large-12 columns">
+      <h1>404 <span>Not Found</span></h1>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="large-12 columns">
+    <h2>The page you were looking for doesn't exist.</h2>
+    <p>Think this is an error? Please <a href="mailto:%20hello@apachefriends.org">let us know</a>.</p>
+    <form action="/dashboard/search.html" method="get">
+    <div class="row">
+      <div class="large-8 small-9 columns">
+        <input type="text" name="q" placeholder="Search..">
+      </div>
+      <div class="large-4 small-3 columns">
+        <input type="submit" class="success button postfix expand" value="Search"/>
+      </div>
+    </div>
+    </form>
+  </div>
+</div>
 
     </div>
 
