--- a/howto.html
+++ b/howto.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="utf-8">
 
@@ -24,7 +24,7 @@
 
   </head>
 
-  <body class="de de_howto">
+  <body class="howto">
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
@@ -37,7 +37,7 @@
       <nav class="top-bar" data-topbar>
         <ul class="title-area">
           <li class="name">
-            <h1><a href="/dashboard/de/index.html">Apache Friends</a></h1>
+            <h1><a href="/dashboard/index.html">Apache Friends</a></h1>
           </li>
           <li class="toggle-topbar menu-icon">
             <a href="#">
@@ -50,8 +50,8 @@
           <!-- Right Nav Section -->
           <ul class="right">
               <li class=""><a href="/applications.html">Applications</a></li>
-              <li class=""><a href="/dashboard/de/faq.html">Häufig gestellte Fragen</a></li>
-              <li class="active"><a href="/dashboard/de/howto.html">HOW-TO Guides</a></li>
+              <li class=""><a href="/dashboard/faq.html">FAQs</a></li>
+              <li class="active"><a href="/dashboard/howto.html">HOW-TO Guides</a></li>
               <li class=""><a target="_blank" href="/dashboard/phpinfo.php">PHPInfo</a></li>
               <li class=""><a href="/phpmyadmin/">phpMyAdmin</a></li>
           </ul>
@@ -109,9 +109,9 @@
 
               <ul class="inline-list">
                 <li><a href="https://www.apachefriends.org/blog.html">Blog</a></li>
-                <li><a href="https://www.apachefriends.org/privacy_policy.html">Datenschutzbestimmungen</a></li>
+                <li><a href="https://www.apachefriends.org/privacy_policy.html">Privacy Policy</a></li>
                 <li>
-<a target="_blank" href="http://www.fastly.com/">                    CDN bereitgestellt durch
+<a target="_blank" href="http://www.fastly.com/">                    CDN provided by
                     <img width="48" data-2x="/dashboard/images/fastly-logo@2x.png" src="/dashboard/images/fastly-logo.png" />
 </a>                </li>
               </ul>
