--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="utf-8">
 
@@ -24,7 +24,7 @@
 
   </head>
 
-  <body class="de de_index index">
+  <body class="index">
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
@@ -37,7 +37,7 @@
       <nav class="top-bar" data-topbar>
         <ul class="title-area">
           <li class="name">
-            <h1><a href="/dashboard/de/index.html">Apache Friends</a></h1>
+            <h1><a href="/dashboard/index.html">Apache Friends</a></h1>
           </li>
           <li class="toggle-topbar menu-icon">
             <a href="#">
@@ -50,8 +50,8 @@
           <!-- Right Nav Section -->
           <ul class="right">
               <li class=""><a href="/applications.html">Applications</a></li>
-              <li class=""><a href="/dashboard/de/faq.html">Häufig gestellte Fragen</a></li>
-              <li class=""><a href="/dashboard/de/howto.html">HOW-TO Guides</a></li>
+              <li class=""><a href="/dashboard/faq.html">FAQs</a></li>
+              <li class=""><a href="/dashboard/howto.html">HOW-TO Guides</a></li>
               <li class=""><a target="_blank" href="/dashboard/phpinfo.php">PHPInfo</a></li>
               <li class=""><a href="/phpmyadmin/">phpMyAdmin</a></li>
           </ul>
@@ -76,11 +76,11 @@
   <div class="large-12 columns">
     <p>
       You have successfully installed XAMPP on this system! Now you can start using Apache, MariaDB, PHP and other components.
-      You can find more info in the <a href="/dashboard/de/faq.html">Häufig gestellte Fragen</a> section or check the <a href="/dashboard/de/howto.html">HOW-TO Guides</a> for getting started with PHP applications.
+      You can find more info in the <a href="/dashboard/faq.html">FAQs</a> section or check the <a href="/dashboard/howto.html">HOW-TO Guides</a> for getting started with PHP applications.
     </p>
     <p>
       XAMPP is meant only for development purposes. It has certain configuration settings that make it easy to develop locally but that are insecure if you want to have your installation accessible to others.
-      If you want have your XAMPP accessible from the internet, make sure you understand the implications and you checked the <a href="/dashboard/de/faq.html">Häufig gestellte Fragen</a> to learn how to protect your site. Alternatively you can use <a href="https://bitnami.com/stack/wamp">WAMP</a>, <a href="https://bitnami.com/stack/mamp">MAMP</a> or <a href="https://bitnami.com/stack/lamp">LAMP</a> which are similar packages which are more suitable for production.
+      If you want have your XAMPP accessible from the internet, make sure you understand the implications and you checked the <a href="/dashboard/faq.html">FAQs</a> to learn how to protect your site. Alternatively you can use <a href="https://bitnami.com/stack/wamp">WAMP</a>, <a href="https://bitnami.com/stack/mamp">MAMP</a> or <a href="https://bitnami.com/stack/lamp">LAMP</a> which are similar packages which are more suitable for production.
     </p>
     <p>
       Start the XAMPP Control Panel to check the server status.
@@ -89,25 +89,25 @@
 </div>
 <div class="row">
   <div class="large-12 columns">
-    <h3>Gemeinschaft</h3>
+    <h3>Community</h3>
   </div>
 </div>
 <div class="row">
   <div class="large-12 columns">
     <p>
-      XAMPP gibt es seit mehr als 10 Jahren &ndash; eine riesige Gemeinschaft steht dahinter. Auch du kannst ein Teil davon werden, durch Teilnahme an unseren <a href="https://community.apachefriends.org">Foren</a>, indem du dich in der <a href="https://www.apachefriends.org/community.html#mailing_list">Mailing-Liste</a> eintragen lässt, uns auf <a href="https://www.facebook.com/we.are.xampp">Facebook</a> likest, unseren Tätigkeiten auf <a href="https://twitter.com/apachefriends">Twitter</a> folgst oder uns zu deinen <a href="https://plus.google.com/+xampp/posts">Google+</a> Kreisen hinzufügst.
+      XAMPP has been around for more than 10 years &ndash; there is a huge community behind it. You can get involved by joining our <a href="https://community.apachefriends.org">Forums</a>, adding yourself to the <a href="https://www.apachefriends.org/community.html#mailing_list">Mailing List</a>, and liking us on <a href="https://www.facebook.com/we.are.xampp">Facebook</a>, following our exploits on <a href="https://twitter.com/apachefriends">Twitter</a>, or adding us to your <a href="https://plus.google.com/+xampp/posts">Google+</a> circles.
     </p>
   </div>
 </div>
 <div class="row">
   <div class="large-12 columns">
-    <h3>Trage zur Übersetzung von XAMPP bei: <a href="https://translate.apachefriends.org/">translate.apachefriends.org</a>.</h3>
+    <h3>Contribute to XAMPP translation at <a href="https://translate.apachefriends.org/">translate.apachefriends.org</a>.</h3>
   </div>
 </div>
 <div class="row">
   <div class="large-12 columns">
     <p>
-      Möchten Sie uns helfen XAMPP in andere Sprachen zu übersetzen? Wir brauchen Ihre Hilfe um XAMPP in diversen Sprachen anbieten zu können. Dazu haben wir eine Website,<a href="https://translate.apachefriends.org/">translate.apachefriends.org</a> eingerichtet, in welcher Nutzer mit Übersetzungen beitragen können.
+      Can you help translate XAMPP for other community members? We need your help to translate XAMPP into different languages. We have set up a site, <a href="https://translate.apachefriends.org/">translate.apachefriends.org</a>, where users can contribute translations.
     </p>
   </div>
 </div>
@@ -145,9 +145,9 @@
 
               <ul class="inline-list">
                 <li><a href="https://www.apachefriends.org/blog.html">Blog</a></li>
-                <li><a href="https://www.apachefriends.org/privacy_policy.html">Datenschutzbestimmungen</a></li>
+                <li><a href="https://www.apachefriends.org/privacy_policy.html">Privacy Policy</a></li>
                 <li>
-<a target="_blank" href="http://www.fastly.com/">                    CDN bereitgestellt durch
+<a target="_blank" href="http://www.fastly.com/">                    CDN provided by
                     <img width="48" data-2x="/dashboard/images/fastly-logo@2x.png" src="/dashboard/images/fastly-logo.png" />
 </a>                </li>
               </ul>
